# GittyButler

./: .gitignore  CMakeLists.txt  README.md
cmake/: gitty.exemplar-config.cmake.in
include/gitty/exemplar/: identity.hpp
src/gitty/exemplar/: CMakeLists.txt  identity.cpp
